// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Pruebas de <GifGrid/> Debe mostrar correctamente <GifGrid/> 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Heroe Academia
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[` Pruebas de <GifGrid/> Deben mostrar items cuando se cargan imágenes useFecthGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Heroe Academia
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https//localhost/cosa.gif"
    />
  </div>
</Fragment>
`;
